--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -32,7 +32,9 @@
 
 
 </div> <!-- Container end-->
-
+<script>
+	    var user_role = '[[${info.getRole()}]]';
+</script>
 <footer th:replace="snippets.html :: name_footer"></footer>
 
 
