--- a/src/main/webapp/html/inventory.html
+++ b/src/main/webapp/html/inventory.html
@@ -10,11 +10,11 @@
 
 <div class="container">
 
-    <h3 class="inventory-header">Inventory Details
+    <h3 class="inventory-header mt-2">Inventory Details
 
-                <button type="button" class="btn btn-primary inventory-header-child" id="refresh-data">Refresh</button>
+                <button type="button" class="btn btn-primary inventory-header-child access-supervisor" id="refresh-data">Refresh</button>
                 &nbsp;
-                <button type="button" class="btn btn-primary inventory-header-child" id="upload-data">Upload</button>
+                <button type="button" class="btn btn-primary inventory-header-child access-supervisor" id="upload-data">Upload</button>
 
     </h3>
 
