--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -59,6 +59,9 @@
 			</div>
 			<button type="submit" id="login" class="login-button">Sign In</button>
 		</form>
+		<div class="card-footer text-danger">
+			[[${info.getMessage()}]]
+		</div>
 	</div>
 </div>
 
