--- a/src/main/webapp/html/order-view.html
+++ b/src/main/webapp/html/order-view.html
@@ -10,13 +10,13 @@
 
 <div class="container">
 
-    <h3>Order View</h3>
+    <h3 class="mt-2">Order View</h3>
 
     <!-- Top row with form-->
     <div class="row">
         <div class="col-12">
             <form class="form-inline" id="item-form">
-                <button type="button" class="btn btn-success" id="create-new-order"  ><a th:href="@{/ui/order/new}">Create New Order</a></button>
+                <button type="button" class="btn btn-success " id="create-new-order"  ><a th:href="@{/ui/order/new}" class="text-white">Create New Order</a></button>
             </form>
         </div>
     </div>
