--- a/src/main/webapp/html/brand-report.html
+++ b/src/main/webapp/html/brand-report.html
@@ -10,7 +10,7 @@
 
 <div class="container">
 
-    <h3 class="brand-header">
+    <h3 class="brand-header mt-2">
         Brands Details
         <button type="button" class="btn btn-primary brand-header-child" id="filter-data" >Filter <i class="fa fa-filter"></i></button>
 
