--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -10,13 +10,13 @@
 
 <div class="container">
 
-<h3 class="brand-header">
+<h3 class="brand-header mt-2">
 	Brands Details
-	    <button type="button" class="btn btn-primary brand-header-child" data-toggle="modal" data-target="#addBrand">	Add	<i class="fa fa-plus " ></i></button>
-        <button type="button" class="btn btn-primary brand-header-child" id="upload-data">	Upload    <i class="fa fa-upload" ></i>
+	    <button type="button" class="btn btn-primary brand-header-child access-supervisor" data-toggle="modal" data-target="#addBrand">	Add	<i class="fa fa-plus " ></i></button>
+        <button type="button" class="btn btn-primary brand-header-child access-supervisor" id="upload-data">	Upload    <i class="fa fa-upload" ></i>
 		</button>
-	<button type="button" class="btn btn-primary brand-header-child" id="refresh-data">Refresh <i class="fa fa-refresh"></i></button>
-	<button type="button" class="btn btn-primary brand-header-child" id="filter-data" >Filter <i class="fa fa-filter"></i></button>
+	<button type="button" class="btn btn-primary brand-header-child access-supervisor" id="refresh-data">Refresh <i class="fa fa-refresh"></i></button>
+<!--	<button type="button" class="btn btn-primary brand-header-child" id="filter-data" >Filter <i class="fa fa-filter"></i></button>-->
 
 </h3>
 
@@ -25,7 +25,37 @@
 <div class="row">
 	&nbsp;
 </div>
-<div class="row">
+
+	<div class="row mb-4">
+		<div class="col-12">
+			<form class="form-inline" id="brand-search-form">
+				<div class="form-group">
+					<label for="inputBrandSearch" class="col-sm-2 col-form-label">Brand</label>
+					<div class="col-sm-10">
+
+						<select id="inputBrandSearch" class="form-control" name="brand">
+							<option value="">Select an option</option>
+						</select>
+<!--						<input type="text" class="form-control" name="brand" id="inputBrandSearch" placeholder="enter brand">-->
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputCategorySearch" class="col-sm-2 col-form-label">Category</label>
+					<div class="col-sm-10">
+					<select id="inputCategorySearch" class="form-control"  name="category">
+						<option value="">Select an option</option>
+					</select>
+<!--						<input type="text" class="form-control" name="category" id="inputCategorySearch" placeholder="enter category">-->
+					</div>
+
+				</div>
+				&nbsp;
+				<button type="button" class="btn btn-primary" id="search-brand-category">Search</button>
+			</form>
+		</div>
+	</div>
+
+	<div class="row">
 
  <!-- Table -->
  <div class="col-12">
@@ -160,52 +190,52 @@
 
 <!--	Brand Search Modal -->
 <!-- Modal -->
-<div class="modal fade" id="searchBrand" tabindex="-1" aria-labelledby="searchBrandLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title" id="searchBrandLabel">Search</h4>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
-				<form class="form-inline" id="brand-search-form">
-					<div class="form-group">
-						<label for="inputBrandName" class="col-sm-2 col-form-label">Brand Name</label>
-						<div class="col-sm-10">
-							<input type="text" class="form-control" name="brand" id="inputBrandSearch" placeholder="enter name">
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="inputCategoryName" class="col-sm-2 col-form-label">Category Name</label>
-						<div class="col-sm-10">
-							<input type="text" class="form-control" name="category" id="inputCategorySearch" placeholder="enter category name">
-						</div>
-					</div>
+<!--<div class="modal fade" id="searchBrand" tabindex="-1" aria-labelledby="searchBrandLabel" aria-hidden="true">-->
+<!--	<div class="modal-dialog">-->
+<!--		<div class="modal-content">-->
+<!--			<div class="modal-header">-->
+<!--				<h4 class="modal-title" id="searchBrandLabel">Search</h4>-->
+<!--				<button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--					<span aria-hidden="true">&times;</span>-->
+<!--				</button>-->
+<!--			</div>-->
+<!--			<div class="modal-body">-->
+<!--				<form class="form-inline" id="brand-search-form">-->
 <!--					<div class="form-group">-->
 <!--						<label for="inputBrandName" class="col-sm-2 col-form-label">Brand Name</label>-->
 <!--						<div class="col-sm-10">-->
-<!--							<select class="brand-select" multiple="multiple" style="width:50%;"></select>-->
+<!--							<input type="text" class="form-control" name="brand" id="inputBrandSearch" placeholder="enter name">-->
 <!--						</div>-->
 <!--					</div>-->
-
 <!--					<div class="form-group">-->
 <!--						<label for="inputCategoryName" class="col-sm-2 col-form-label">Category Name</label>-->
 <!--						<div class="col-sm-10">-->
-<!--							<select class="brand-select" multiple="multiple" style="width:50%;"></select>-->
+<!--							<input type="text" class="form-control" name="category" id="inputCategorySearch" placeholder="enter category name">-->
 <!--						</div>-->
 <!--					</div>-->
+<!--&lt;!&ndash;					<div class="form-group">&ndash;&gt;-->
+<!--&lt;!&ndash;						<label for="inputBrandName" class="col-sm-2 col-form-label">Brand Name</label>&ndash;&gt;-->
+<!--&lt;!&ndash;						<div class="col-sm-10">&ndash;&gt;-->
+<!--&lt;!&ndash;							<select class="brand-select" multiple="multiple" style="width:50%;"></select>&ndash;&gt;-->
+<!--&lt;!&ndash;						</div>&ndash;&gt;-->
+<!--&lt;!&ndash;					</div>&ndash;&gt;-->
 
-				</form>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-primary" id="search-brand-category">Filter</button>
-				<button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-			</div>
-		</div>
-	</div>
-</div>
+<!--&lt;!&ndash;					<div class="form-group">&ndash;&gt;-->
+<!--&lt;!&ndash;						<label for="inputCategoryName" class="col-sm-2 col-form-label">Category Name</label>&ndash;&gt;-->
+<!--&lt;!&ndash;						<div class="col-sm-10">&ndash;&gt;-->
+<!--&lt;!&ndash;							<select class="brand-select" multiple="multiple" style="width:50%;"></select>&ndash;&gt;-->
+<!--&lt;!&ndash;						</div>&ndash;&gt;-->
+<!--&lt;!&ndash;					</div>&ndash;&gt;-->
+
+<!--				</form>-->
+<!--			</div>-->
+<!--			<div class="modal-footer">-->
+<!--				<button type="button" class="btn btn-primary" id="search-brand-category">Filter</button>-->
+<!--				<button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</div>-->
 
 </div>
 
