--- a/src/main/webapp/html/order-item-edit.html
+++ b/src/main/webapp/html/order-item-edit.html
@@ -10,7 +10,7 @@
 
 <div class="container">
 
-    <h3>Order Items Edit</h3>
+    <h3 class="mt-2">Order Items Edit</h3>
 
     <!-- Top row with form-->
     <div class="row">
@@ -36,8 +36,7 @@
                 </div>
 
                 <button type="button" class="btn btn-primary" id="add-order-item">Add</button>
-                &nbsp;
-
+                &nbsp
                 <button type="button" class="btn btn-primary" id="refresh-data">Refresh </button>
             </form>
         </div>
