--- a/src/main/webapp/html/order-item-view.html
+++ b/src/main/webapp/html/order-item-view.html
@@ -10,7 +10,7 @@
 
 <div class="container">
 
-    <h3>Order Items View</h3>
+    <h3 class="mt-2">Order Items View</h3>
 
     <!-- Top row with form-->
     <div class="row">
