--- a/src/main/webapp/html/order.html
+++ b/src/main/webapp/html/order.html
@@ -10,7 +10,7 @@
 
 <div class="container">
 
-    <h3>Order Details</h3>
+    <h3 class="mt-2">Order Details</h3>
 
     <!-- Top row with form-->
     <div class="row">
@@ -19,7 +19,8 @@
                 <div class="form-group">
                     <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">
+<!--                        <input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">-->
+                        <select id="inputBarcode" class="form-control" name="barcode"></select>
                     </div>
                 </div>
                 <div class="form-group">
@@ -29,7 +30,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputSellingPrice" class="col-sm-2 col-form-label">Selling Price (INR) </label>
+                    <label for="inputSellingPrice" class="col-sm-2 col-form-label">Selling Price (Per pc.) </label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" name="sellingPrice" id="inputSellingPrice" placeholder="enter selling price">
                     </div>
@@ -59,7 +60,7 @@
                 <tr>
                     <th scope="col" name="barcode">Barcode</th>
                     <th scope="col" name="quantity">Quantity</th>
-                    <th scope="col" name="sellingPrice">Selling Price (INR) </th>
+                    <th scope="col" name="sellingPrice">Selling Price (Per pc.) </th>
 
                     <th scope="col">Actions</th>
                 </tr>
@@ -97,7 +98,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputSellingPrice" class="col-sm-2 col-form-label">Selling Price (INR)</label>
+                            <label for="inputSellingPrice" class="col-sm-2 col-form-label" readonly>Selling Price (Per pc.)</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="sellingPrice" placeholder="0.0">
                             </div>
@@ -116,7 +117,11 @@
 </div> <!-- Container end-->
 
 <footer th:replace="snippets.html :: name_footer"></footer>
+<script>
+    var user_email = '[[${info.getEmail()}]]';
+    var user_id = '[[${info.getId()}]]';
 
+</script>
 <script th:src="@{/static/order.js}"/></script>
 <script src="bootstrap-notify.js"></script>
 
