--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -12,11 +12,13 @@
 
 <h3 class="brand-header mt-2">
 	Brands Details
-	    <button type="button" class="btn btn-primary brand-header-child access-supervisor" data-toggle="modal" data-target="#addBrand">	Add	<i class="fa fa-plus " ></i></button>
-        <button type="button" class="btn btn-primary brand-header-child access-supervisor" id="upload-data">	Upload    <i class="fa fa-upload" ></i>
+	    <button th:if="${info.getRole() == 'admin'}" type="button" class="btn btn-primary brand-header-child" data-toggle="modal" data-target="#addBrand" >	Add	<span class="material-symbols-outlined">
+add
+</span></i></button>
+        <button th:if="${info.getRole() == 'admin'}" type="button" class="btn btn-info brand-header-child" id="upload-data">	Upload    <span class="material-symbols-outlined">
+upload_file
+</span>
 		</button>
-	<button type="button" class="btn btn-primary brand-header-child access-supervisor" id="refresh-data">Refresh <i class="fa fa-refresh"></i></button>
-<!--	<button type="button" class="btn btn-primary brand-header-child" id="filter-data" >Filter <i class="fa fa-filter"></i></button>-->
 
 </h3>
 
@@ -151,7 +153,7 @@
 
 <!--	Add Brand Category Modal -->
 	<!-- Modal -->
-	<div class="modal fade" id="addBrand" tabindex="-1" aria-labelledby="addBrandLabel" aria-hidden="true">
+	<div class="modal fade" id="addBrand" tabindex="-1"  aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
