--- a/src/main/webapp/html/sales-report.html
+++ b/src/main/webapp/html/sales-report.html
@@ -38,7 +38,9 @@
                 </div>
             </div>
             <div class=" col text-center">
-                <button type="button" class="btn btn-primary " id="filter-sales">Search</button>
+                <button type="button" class="btn btn-primary" id="filter-sales"><span class="material-symbols-outlined">
+tune
+</span> Filter </button>
             </div>
             &nbsp;
         </form>
