--- a/src/main/webapp/html/order-item-edit.html
+++ b/src/main/webapp/html/order-item-edit.html
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">
+                        <select id="inputBarcode" class="form-control" name="barcode"></select>
                     </div>
                 </div>
                 <div class="form-group">
@@ -35,9 +35,7 @@
                     </div>
                 </div>
 
-                <button type="button" class="btn btn-primary" id="add-order-item">Add</button>
-                &nbsp
-                <button type="button" class="btn btn-primary" id="refresh-data">Refresh </button>
+                <button type="button" class="btn btn-success" id="add-order-item">Add</button>
             </form>
         </div>
     </div>
@@ -54,6 +52,7 @@
                 <thead>
                 <tr>
                     <th scope="col" name="barcode">Barcode</th>
+                    <th scope="col" name="name">Name</th>
                     <th scope="col" name="quantity">Quantity</th>
                     <th scope="col" name="sellingPrice">Selling Price</th>
                     <th scope="col" >Actions</th>
