--- a/src/main/webapp/html/order-item-edit.html
+++ b/src/main/webapp/html/order-item-edit.html
@@ -79,24 +79,24 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form class="form-inline" id="order-item-edit-form">
-                        <div class="form-group">
+                    <form class="form" id="order-item-edit-form">
+                        <div class="form-group row">
                             <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
                             <div class="col-sm-10">
                                 <input type="text"  class="form-control" name="barcode" placeholder="enter barcode" readonly>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group row">
                             <label for="inputQuantity" class="col-sm-2 col-form-label">Quantity</label>
                             <div class="col-sm-10">
                                 <input type="number"  class="form-control" name="quantity" placeholder="enter quantity"
                                        step="1">
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group row">
                             <label for="inputSellingPrice" class="col-sm-2 col-form-label">Selling Price (INR)</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="sellingPrice" placeholder="0.0">
+                                <input type="number" step="any" class="form-control" name="sellingPrice" placeholder="0.0">
                             </div>
                         </div>
                         <input type="hidden" name="id" >
