--- a/src/main/webapp/html/order.html
+++ b/src/main/webapp/html/order.html
@@ -85,20 +85,20 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form class="form-inline" id="item-edit-form">
-                        <div class="form-group">
+                    <form class="form" id="item-edit-form">
+                        <div class="form-group row">
                             <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="barcode" placeholder="enter barcode" readonly>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group row">
                             <label for="inputQuantity" class="col-sm-2 col-form-label">Quantity</label>
                             <div class="col-sm-10">
                                 <input type="number" min="1" step="1" class="form-control" name="quantity" placeholder="enter quantity" required>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group row">
                             <label for="inputSellingPrice" class="col-sm-2 col-form-label">Selling Price (Per pc.)</label>
                             <div class="col-sm-10">
                                 <input type="number" min="0.01" step="any" class="form-control" name="sellingPrice" placeholder="0.0" required>
